[gd_scene load_steps=6 format=3 uid="uid://chae8rqxth3mp"]

[ext_resource type="Shader" path="res://src/button.gdshader" id="1_tolix"]
[ext_resource type="Script" path="res://src/ui/animated_button.gd" id="2_krkn6"]
[ext_resource type="Script" path="res://src/ui/waving_text.gd" id="3_rfxy2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5a14v"]
resource_local_to_scene = true
shader = ExtResource("1_tolix")
shader_parameter/rest_color = Color(1, 1, 1, 1)
shader_parameter/hover = false
shader_parameter/hover_color = Color(0.95061, 0.868696, 0.967139, 1)
shader_parameter/stripe_attenuation = 0.1
shader_parameter/stripe_slope = 3.0
shader_parameter/stripe_count = 10
shader_parameter/speed = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xap15"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 20

[node name="AnimatedButton" type="Button"]
material = SubResource("ShaderMaterial_5a14v")
custom_minimum_size = Vector2(90, 90)
pivot_offset = Vector2(45, 45)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_xap15")
theme_override_styles/hover = SubResource("StyleBoxFlat_xap15")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xap15")
theme_override_styles/normal = SubResource("StyleBoxFlat_xap15")
script = ExtResource("2_krkn6")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Icon" type="TextureRect" parent="HBoxContainer"]
visible = false
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
expand_mode = 5
stretch_mode = 5

[node name="WavingText" type="HBoxContainer" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/separation = 0
script = ExtResource("3_rfxy2")
one_shot = true
wave_amplitude = 10

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_focus_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_focus_exited"]
